--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hotel Listing System</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <link href="https://fonts.googleapis.com/css?family=Lobster|Lobster+Two|Open+Sans+Condensed:300" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
@@ -16,94 +19,116 @@
         <nav id="navlink">
             <div>
                 <ul class="list">
-                    <li><img src="img/favicon.png" width="20px"> Logo</li>
+                    <li><img src="img/favicon.png" width="20px"> HOTEL LISTING SYSTEM</li>
                 </ul>
             </div>
             <ul class="list">
-
-                <li><a href="">Find Your Dream Hotel</a></li>
-                <li><a href="">About us</a></li>
+                <li><a href="">Home</a></li>
+                <li><a href="aboutus.html">About us</a></li>
                 <li><a href="">Contact Us</a></li>
-
             </ul>
-
         </nav>
     </header>
-    <main>
-        <section id="bodypics">
-            <h1 id="first">FIND YOUR DREAM HOTEL IN ANY LOCATION</h1>
-        </section>
-        <article>
-            <section id="about">
-                <h4>About Hotel Listing System</h4>
-                <div>
-                    </ <p>Online hotel reservations are a popular method for booking hotel room. Travellers can book can
-                    book room on a computer by using online security to protect their privacy and financial information
-                    and by using several online travel agents to compare prices and facilities at different hotels</p>
-                    <div>
-                        <div>
-                            <p>We help customers locate affordable hotels and their respective cost that suite their
-                                taste in any city. We also assist Hotel Owners advertise their hotel to potential
-                                customers and travel agents.</p>
+    <section>
+        <div class="bd-example">
+            <div id="div" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#div" data-slide-to="0" class="active"></li>
+                    <li data-target="#div" data-slide-to="1"></li>
+                    <li data-target="#div" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./img/img16.png" class="d-block w-100" alt="..." height="500px">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h3>RestPlace Hotel</h3>
+                            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                         </div>
-            </section>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/img11.jpg" class="d-block w-100" alt="..." height="500px">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h3>Hephizibah Hotels</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/img17.png" class="d-block w-100" alt="..." height="500px">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h3>Hadassan Resort</h3>
+                            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                        </div>
 
-
-            <section></section>
-        </article>
-
-    </main>
-
-
-    <section id="flexSec">
-        <h2 class="text-center">AVAILABLE HOTELS</h2>
-        <hr width="20%">
-        <div class="di">
-            <div class="flex-wrapper">
-                <div class="card">
-                    <img src="img/img6.jpg" alt="Hotel 1">
-                    <div class=" card-body">
-                        <h4>Douglas Palace</h4>
-                        <p><strong><i>No Of Rooms:</i></strong>25</p>
-                        <p><strong><i>Cost:</i></strong>$80</p>
                     </div>
                 </div>
+                <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
-
-            <div class="flex-wrapper">
-                <div class="card">
-                    <img src="img/img9.jpg" alt="Hotel 4">
-                    <div class=" card-body">
-                        <h4>Hadassan Hotel</h4>
-                        <p><strong><i>No Of Rooms:</i></strong>40</p>
-                        <p><strong><i>Cost:</i></strong>$85</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="flex-wrapper">
-                <div class="card">
-                    <img src="img/img10.jpg" alt="Hotel 6">
-                    <div class=" card-body">
-                        <h4> RestPlace Hotel</h4>
-                        <p><strong><i>No Of Rooms:</i></strong>27</p>
-                        <p><strong><i>Cost:</i></strong>$90</p>
-                    </div>
-                </div>
-            </div>
-            </div>
+        </div>
     </section>
+
+
+    
+    <main>
+        <div id="result">
+
+
+            <form class="form-inline">
+
+                <div class="form-group mx-sm-3 mb-2">
+                    <label for="inputPassword2" class="sr-only">location</label>
+                    <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
+                </div>
+                <button type="submit" class="btn btn-danger mb-2">Search</button>
+            </form>
+        </div>
+        <section id="divine"></section>
+    </main>
     <footer>
-        <ul>
+        <section id="foot">
+            <div>
+                <h2>SOCIAL</h2>
+                <p>BLOG</p>
+                <p>TWITTER</p>
+                <p>FACEBOOK</p>
+                <p>INSTAGRAM</p>
+            </div>
 
-            <li><a href="">Contact Us</a></li>
-
-        </ul>
+            <div>
+                <h2>BUSINESS</h2>
+                <p>ADVERRTISEMENT
+                </p>
+                <p>RENTALS</p>
+            </div>
+            <div><h2>Contact</h2>
+            <p>Douglas Residence Along Shell Manifold,Airport Road,Port Harcourt.<br>Email:douglaschinenye@yahoo.com<br>
+            07056595125 </p></div>
+           
+        </section>
+        <h3>copyright 2019</h3>
     </footer>
 
 
 
 
+
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
 
 </body>
 
