Completed UI design

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </section>
 
 
-    
+
     <main>
         <div id="result">
 
@@ -83,35 +83,51 @@
 
                 <div class="form-group mx-sm-3 mb-2">
                     <label for="inputPassword2" class="sr-only">location</label>
-                    <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
-                </div>
-                <button type="submit" class="btn btn-danger mb-2">Search</button>
+                    <input type="password" class="form-control" id="inputPassword2" placeholder="Enter your location">
+                 </div>
+                <button type="submit" class="btn " style="background-color: #85144b; color: white">Find your desired hotel</button>
             </form>
         </div>
         <section id="divine"></section>
     </main>
-    <footer>
-        <section id="foot">
-            <div>
-                <h2>SOCIAL</h2>
-                <p>BLOG</p>
-                <p>TWITTER</p>
-                <p>FACEBOOK</p>
-                <p>INSTAGRAM</p>
-            </div>
+<h4 style="margin-left: 33px">More than just hotels… discover pure comfort with homes & apartments</h4>
+    <section id="hotels">
 
-            <div>
-                <h2>BUSINESS</h2>
-                <p>ADVERRTISEMENT
-                </p>
-                <p>RENTALS</p>
+        <div class="card" style="width: 30%;">
+            <img src="./img/img10.jpg" class="card-img-top" alt="Eko Hotels Lagos" height="360px">
+            <div class="card-body">
+                <p class="card-text"></p><strong>Eko Hotels Lagos</strong></p>
+                <p> NGN 30000</p>
+
             </div>
-            <div><h2>Contact</h2>
-            <p>Douglas Residence Along Shell Manifold,Airport Road,Port Harcourt.<br>Email:douglaschinenye@yahoo.com<br>
-            07056595125 </p></div>
-           
-        </section>
-        <h3>copyright 2019</h3>
+        </div>
+        <div class="card" style="width: 30%;">
+            <img src="./img/img19.jpg" class="card-img-top" alt="Presken">
+            <div class="card-body">
+                <p class="card-text"></p><strong>Presken Hotel & Resorts Limited </strong></p>
+                <p> NGN 20000</p>
+
+            </div>
+        </div>
+        <div class="card" style="width: 30%;">
+            <img src="./img/img20.jpg" class="card-img-top" alt="Ibis Lagos Airport " height="360px"> 
+            <div class="card-body">
+                <p class="card-text"></p><strong>Ibis Lagos Airport</strong></p>
+                <p> NGN 35,576</p>
+
+            </div>
+        </div>
+    </section>
+<br>
+<br>
+    <footer>
+<ul class="footer">
+<li class="footer-nav">Find your desired Hotel</li>
+<li class="footer-nav">Contact Us</li>
+<li class="footer-nav">Come work with us</li>
+</ul>
+<p style="text-align:center"> &copy;copyright © 2019 Built by Douglas Divine at Decagon's Bootcamp. All rights reserved.
+</p>
     </footer>
 
 
@@ -129,7 +145,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
-
+    <script src="index.js"></script>
 </body>
 
 </html>
